--- a/app/src/main/res/layout/fragment_customer_management.xml
+++ b/app/src/main/res/layout/fragment_customer_management.xml
@@ -5,83 +5,73 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
     </data>
-  <androidx.constraintlayout.widget.ConstraintLayout
-      android:layout_width="match_parent"
-      android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-      <soup.neumorphism.NeumorphCardView
-          android:layout_width="match_parent"
+
+      <androidx.cardview.widget.CardView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="@dimen/_10dp"
           android:id="@+id/btnCreateCustomer"
-          android:layout_height="wrap_content"
+          app:cardCornerRadius="@dimen/_5dp"
+          app:cardUseCompatPadding="true"
           android:textStyle="bold"
-          android:layout_marginStart="80dp"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintTop_toTopOf="parent"
-          android:textColor="@color/text_color_heading"
-          app:neumorph_backgroundColor="@color/colorPrimaryDark"
-          android:gravity="center"
-          app:neumorph_shadowColorLight="@color/nuemph_shadow_light"
-          app:neumorph_shadowColorDark="@color/nuemph_shadow_dark">
+          android:layout_gravity="end"
+          android:layout_marginEnd="@dimen/_10dp"
+          app:cardBackgroundColor="@color/colorPrimaryDark"
+          android:textColor="@color/text_color_heading">
 
-
-              <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:layout_gravity="center|right"
-                  android:textSize="25sp"
-                  android:textStyle="bold"
-                  android:layout_margin="@dimen/_10dp"
-                  android:id="@+id/txtCustomer"
-                  android:gravity="center"
-                  android:text="Create Customer"
-                  android:layout_marginStart="20dp"
-                  app:layout_constraintStart_toStartOf="parent"
-                  app:layout_constraintTop_toTopOf="parent"
-                  app:layout_constraintBottom_toBottomOf="parent"
-                  app:layout_constraintEnd_toEndOf="parent"
-                  />
-
-
-      </soup.neumorphism.NeumorphCardView>
-
-      <soup.neumorphism.NeumorphCardView
-          android:layout_width="match_parent"
-          android:id="@+id/searchView"
-          android:layout_height="wrap_content"
-          android:textStyle="bold"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintTop_toBottomOf="@id/btnCreateCustomer"
-          android:textColor="@color/text_color_heading"
-          app:neumorph_backgroundColor="@color/lite_grey"
-          android:gravity="center"
-          app:neumorph_shadowColorLight="@color/nuemph_shadow_light"
-          app:neumorph_shadowColorDark="@color/nuemph_shadow_dark">
-
-
-          <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
+          <TextView android:fontFamily="@font/montserrat_regular"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:textSize="25sp"
-              android:layout_margin="@dimen/_10dp"
-              android:text="Contact/Name/GST No"
-              android:layout_marginStart="20dp"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toTopOf="parent"
-              app:layout_constraintBottom_toBottomOf="parent"
-              />
+              android:text="  +  Create Customer"
+              android:textStyle="bold"
+              android:padding="@dimen/_15dp"
+              android:gravity="center"
+              android:textSize="@dimen/txt_14sp"
+              android:textColor="@color/white"/>
+
+      </androidx.cardview.widget.CardView>
 
 
-      </soup.neumorphism.NeumorphCardView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginStart="@dimen/_15dp"
+            android:layout_marginEnd="@dimen/_15dp">
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:endIconMode="none">
+
+                <AutoCompleteTextView
+                    android:id="@+id/etCustomer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/_10dp"
+                    android:drawableStart="@drawable/search_icon"
+                    android:drawableTint="@color/colorPrimary"
+                    android:paddingRight="@dimen/_50dp"
+                    android:hint="Search Customer" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+        </LinearLayout>
 
 
       <androidx.recyclerview.widget.RecyclerView
           android:layout_width="match_parent"
-          android:layout_height="0dp"
-          app:layout_constraintTop_toBottomOf="@id/searchView"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintBottom_toBottomOf="parent"
-          android:id="@+id/recyclerView"/>
+          android:layout_height="match_parent"
+          android:id="@+id/recyclerView"
+          tools:listitem="@layout/item_customer"
+          tools:itemCount="2" />
 
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
