--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,5 +38,6 @@
     <dimen name="txt_15sp">15sp</dimen>
     <dimen name="txt_14sp">14sp</dimen>
     <dimen name="txt_12sp">12sp</dimen>
+    <dimen name="txt_11sp">11sp</dimen>
     <dimen name="txt_13sp">13sp</dimen>
 </resources>
