--- a/app/src/main/res/layout/fragment_staff_management.xml
+++ b/app/src/main/res/layout/fragment_staff_management.xml
@@ -10,64 +10,54 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <soup.neumorphism.NeumorphCardView
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
-            android:id="@+id/btnAddStaff"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10dp"
+            android:id="@+id/btnAddStaff"
+            app:cardCornerRadius="@dimen/_5dp"
+            app:cardUseCompatPadding="true"
             android:textStyle="bold"
-            android:textColor="@color/text_color_heading"
-            app:neumorph_backgroundColor="@color/colorPrimaryDark"
+            android:layout_gravity="end"
+            android:layout_marginEnd="@dimen/_10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:neumorph_shadowColorLight="@color/nuemph_shadow_light"
-            app:neumorph_shadowColorDark="@color/nuemph_shadow_dark">
+            app:cardBackgroundColor="@color/colorPrimaryDark"
+            android:textColor="@color/text_color_heading">
 
+            <TextView android:fontFamily="@font/montserrat_regular"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="  +  Add Staff  "
+                android:textStyle="bold"
+                android:paddingTop="@dimen/_15dp"
+                android:paddingBottom="@dimen/_15dp"
+                android:paddingLeft="@dimen/_30dp"
+                android:paddingRight="@dimen/_30dp"
+                android:gravity="center"
+                android:textSize="@dimen/txt_14sp"
+                android:textColor="@color/white"/>
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent">
+        </androidx.cardview.widget.CardView>
 
-                <ImageView
-                    android:layout_width="34dp"
-                    android:layout_height="34dp"
-                    android:src="@android:drawable/ic_input_add"
-                    android:layout_marginStart="10dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:id="@+id/ivAdd"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:id="@+id/view"
+            android:background="@color/lite_grey"
+            android:layout_marginTop="@dimen/_5dp"
+            app:layout_constraintTop_toBottomOf="@+id/btnAddStaff"/>
 
-                <androidx.appcompat.widget.AppCompatTextView android:fontFamily="@font/montserrat_regular"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center|right"
-                    android:textSize="15sp"
-                    android:id="@+id/txtStaff"
-                    android:layout_marginEnd="20dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@id/ivAdd"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:text="Add Staff" />
-
-
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-        </soup.neumorphism.NeumorphCardView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/recyclerView"
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="80dp"
             tools:listitem="@layout/item_staff"
             tools:itemCount="4"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnAddStaff"/>
+            app:layout_constraintTop_toBottomOf="@id/view"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
